some conf details